# referal

./: .env_example  Dockerfile  README.md  compose.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: bcbf38238249_.py
referal/: crud.py  utils.py
referal/api/: dependencies.py  main.py
referal/api/routers/: codes.py  login.py  referals.py  users.py  utils.py
referal/core/: config.py  db.py  security.py
referal/email_templates/: get_code.html
referal/postgres_db/: crud.py  models.py  schemas.py
scripts/: referal.sh
